package com.springboot.MyTodoList.service;

import com.springboot.MyTodoList.dto.sprint.SprintCreateRequest;
import com.springboot.MyTodoList.dto.sprint.SprintMapper;
import com.springboot.MyTodoList.dto.sprint.SprintResponse;
import com.springboot.MyTodoList.exception.SprintNotFoundException;
import com.springboot.MyTodoList.repository.SprintRepository;
import org.slf4j.LoggerFactory;
import org.slf4j.Logger;
import org.springframework.stereotype.Service;
import org.springframework.transaction.annotation.Transactional;

import java.util.List;

@Service
public class SprintService {
    private static final Logger log = LoggerFactory.getLogger(SprintService.class);
    
    private final SprintRepository sprintRepository;
    
    public SprintService(SprintRepository sprintRepository) {
        this.sprintRepository = sprintRepository;
    }
    
    public List<SprintResponse> findAll() {
        return sprintRepository
                .findAll()
                .stream()
                .map(SprintMapper::toResponse)
                .toList();
    }
    
    public SprintResponse findById(String id) {
        return sprintRepository
                .findById(id)
                .map(SprintMapper::toResponse)
                .orElseThrow(() -> new SprintNotFoundException(id));
    }

    @Transactional
    public SprintResponse createSprint(SprintCreateRequest request) {
        if (sprintRepository.existsById(request.sprintId())) {
            throw new IllegalArgumentException("Sprint with ID '" + request.sprintId() + "' already exists.");
        }
        return SprintMapper.toResponse(sprintRepository.save(SprintMapper.toEntity(request)));
    }

    @Transactional
    public SprintResponse updateStatus(String id, String status) {
        var sprint = sprintRepository.findById(id)
                .orElseThrow(() -> new SprintNotFoundException(id));
        sprint.setStatus(status);
        return SprintMapper.toResponse(sprintRepository.save(sprint));
    }

    @Transactional
    public void deleteSprint(String id) {
        if (!sprintRepository.existsById(id)) {
            throw new SprintNotFoundException(id);
        }
        sprintRepository.deleteById(id);
    }
}
