@startuml

class Sprint {
	{field} +createdAt : OffsetDateTime
	{field} +createdByUserId : String
	{field} +endDate : LocalDate
	{field} +goal : String
	{field} +name : String
	{field} +sprintId : String
	{field} +startDate : LocalDate
	{field} +status : String
	{field} +teamId : String
}


class SprintController {
	{method} +getAll () : ResponseEntity
	{method} +getSprint ( id : String ) : ResponseEntity
}


class SprintCreateRequest {
	{field} -createdByUserId : String
	{field} -endDate : LocalDate
	{field} -goal : String
	{field} -name : String
	{field} -sprintId : String
	{field} -startDate : LocalDate
	{field} -status : String
	{field} -teamId : String
	{method} +createdByUserId () : String
	{method} +endDate () : LocalDate
	{method} +equals ( o : Object ) : boolean
	{method} +goal () : String
	{method} +hashCode () : int
	{method} +name () : String
	{method} +sprintId () : String
	{method} +startDate () : LocalDate
	{method} +status () : String
	{method} +teamId () : String
	{method} +toString () : String
}


class SprintMapper {
	{method}  {static} +toEntity ( request : SprintCreateRequest ) : Sprint
	{method}  {static} +toResponse ( entity : Sprint ) : SprintResponse
}


interface SprintRepository {
}


class SprintResponse {
	{field} -createdAt : OffsetDateTime
	{field} -createdByUserId : String
	{field} -endDate : LocalDate
	{field} -goal : String
	{field} -name : String
	{field} -sprintId : String
	{field} -startDate : LocalDate
	{field} -status : String
	{field} -teamId : String
	{method} +createdAt () : OffsetDateTime
	{method} +createdByUserId () : String
	{method} +endDate () : LocalDate
	{method} +equals ( o : Object ) : boolean
	{method} +goal () : String
	{method} +hashCode () : int
	{method} +name () : String
	{method} +sprintId () : String
	{method} +startDate () : LocalDate
	{method} +status () : String
	{method} +teamId () : String
	{method} +toString () : String
}


class SprintService {
	{field} {static} -log : Logger
	{method} +findAll () : List
	{method} +findById ( id : String ) : SprintResponse
}




SprintController *--  SprintService : sprintService
SprintService *--  SprintRepository : sprintRepository

hide fields
hide methods

@enduml